--- a/app/src/main/res/layout/activity_after.xml
+++ b/app/src/main/res/layout/activity_after.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".AfterActivity">
+    tools:context=".Activities.AfterActivity">
 
     <TextView
         android:layout_width="match_parent"
@@ -51,6 +51,7 @@
     <Button
         android:id="@+id/savebtn"
         android:layout_width="wrap_content"
+        android:enabled="false"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:backgroundTint="#03DAC5"
