--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    tools:context=".Activities.MainActivity">
+<com.google.android.material.appbar.MaterialToolbar
+    android:id="@+id/toolbar"
+    android:backgroundTint="#03DAC5"
+    android:background="#03DAC5"
+    app:title="ChitChat"
+    android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar"
+    app:popupTheme="@style/ThemeOverlay.MaterialComponents.ActionBar"
+    app:titleTextColor="@color/white"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"/>
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabs"
+        android:elevation="10dp"
+        app:tabIndicatorColor="@color/white"
+        app:tabSelectedTextColor="@color/white"
+        app:tabTextColor="@color/browser_actions_bg_grey"
+        android:background="#03DAC5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+<com.google.android.material.tabs.TabItem
+    android:text="CHAT"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"/>
+        <com.google.android.material.tabs.TabItem
+            android:text="PEOPLE"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </com.google.android.material.tabs.TabLayout>
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+</LinearLayout>
