--- a/app/src/main/res/layout/list_item_chat_message_rcv.xml
+++ b/app/src/main/res/layout/list_item_chat_message_rcv.xml
@@ -1,61 +1,66 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="30dp"
+    android:layout_marginEnd="30dp"
     android:clipToPadding="false"
     android:paddingStart="16dp"
     android:paddingTop="4dp"
     android:paddingEnd="16dp"
     android:paddingBottom="4dp">
-    <ImageView
-        android:id="@+id/highFiveImg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string/like_message"
-        android:visibility="gone"
-        android:src="@drawable/ic_high_five_inverted"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/materialCardView3" />
+
     <com.google.android.material.card.MaterialCardView
-        android:id="@+id/materialCardView3"
-        android:layout_width="wrap_content"
+        android:id="@+id/messageCardView"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:elevation="0dp"
-        app:cardBackgroundColor="@color/purple_500"
+        app:cardBackgroundColor="#f3f3f3"
+        app:elevation="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:shapeAppearance="@style/ChatSentShapeAppearance">
+        app:shapeAppearance="@style/ChatrcvShapeAppearance">
+
         <com.google.android.flexbox.FlexboxLayout
-            android:id="@+id/f"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="8dp"
             app:alignItems="flex_end"
             app:flexWrap="wrap"
             app:justifyContent="flex_end">
+
             <TextView
                 android:id="@+id/content"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:lineSpacingExtra="5dp"
-                android:textColor="@android:color/white"
+                android:textColor="#1c1d2a"
                 android:textSize="14sp"
-                tools:text="Hello" />
+                tools:text="Hello"
+                />
+
             <TextView
                 android:id="@+id/time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:textColor="#A6ffffff"
+                android:textColor="#858585"
                 android:textSize="12sp"
                 tools:text="12:00 AM" />
         </com.google.android.flexbox.FlexboxLayout>
     </com.google.android.material.card.MaterialCardView>
+
+    <ImageView
+        android:contentDescription="@string/like_message"
+        android:id="@+id/highFiveImg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:clickable="true"
+        android:focusable="true"
+        android:src="@drawable/high_five"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/messageCardView" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
