--- a/app/src/main/res/layout/list_item_chat_message_rcv.xml
+++ b/app/src/main/res/layout/list_item_chat_message_rcv.xml
@@ -58,7 +58,7 @@
         android:background="?attr/selectableItemBackgroundBorderless"
         android:clickable="true"
         android:focusable="true"
-        android:src="@drawable/high_five"
+        android:src="@drawable/ic_high_five"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/messageCardView" />
