--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -6,4 +6,103 @@
     android:layout_height="match_parent"
     tools:context=".Activities.SettingsActivity">
 
+    <EditText
+        android:id="@+id/StatusEt"
+        android:layout_width="250dp"
+        android:inputType="text"
+        android:editable="false"
+        android:layout_height="35dp"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="80dp"
+        tools:layout_editor_absoluteY="461dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="20dp"
+        android:text="Status"
+        android:textColor="@color/black"
+        android:textSize="10sp"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="80dp"
+        tools:layout_editor_absoluteY="441dp" />
+
+    <EditText
+        android:id="@+id/NameTextEt"
+        android:layout_width="250dp"
+        android:layout_height="35dp"
+        android:textSize="15sp"
+        android:text="Name..."
+
+        android:editable="false"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="80dp"
+        tools:layout_editor_absoluteY="348dp" />
+    <TextView
+        android:id="@+id/NameTextTv"
+        android:layout_width="250dp"
+        android:layout_height="35dp"
+        android:textSize="15sp"
+        android:text="Name..."
+        android:editable="false"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="80dp"
+        tools:layout_editor_absoluteY="348dp" />
+
+    <com.google.android.material.tabs.TabItem
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:id="@+id/changeDpTab"
+        tools:layout_editor_absoluteX="330dp"
+        tools:layout_editor_absoluteY="348dp"
+        android:background="@drawable/ic_pencil"
+        android:clickable="true"
+        android:icon="@drawable/ic_pencil"
+        tools:ignore="MissingConstraints" />
+
+    <com.google.android.material.tabs.TabItem
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:id="@+id/changeNameTab"
+        tools:layout_editor_absoluteX="330dp"
+        tools:layout_editor_absoluteY="348dp"
+        android:background="@drawable/ic_pencil"
+        android:clickable="true"
+        android:icon="@drawable/ic_pencil"
+        tools:ignore="MissingConstraints" />
+
+    <com.google.android.material.tabs.TabItem
+        android:layout_width="35dp"
+        android:id="@+id/changeStatusTab"
+        android:background="@drawable/ic_pencil"
+        android:icon="@drawable/ic_pencil"
+        android:layout_height="35dp"
+        android:clickable="true"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="330dp"
+        tools:layout_editor_absoluteY="461dp" />
+    <androidx.cardview.widget.CardView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="35dp"
+        tools:ignore="MissingConstraints">
+    </androidx.cardview.widget.CardView>
+    <TextView
+        android:id="@+id/displayPictureIv"
+        android:layout_width="wrap_content"
+        android:layout_height="20dp"
+        android:text="User Name"
+        android:textColor="@color/black"
+        android:textSize="10sp"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="80dp"
+        tools:layout_editor_absoluteY="328dp" />
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/dpIV"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:src="@mipmap/default_profile_pic"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="130dp"
+        tools:layout_editor_absoluteY="142dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
